@@ -1,3 +1,6 @@
+Changelog 0.0.5:
+- Fixed bug
+
 Changelog 0.0.4:
 - Fixed bug
 
